Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-31044

QDockWidget's default undock position is bad.

XMLWordPrintable

    • qt5: 0d459619a902e547d8c74745453b3bdb8f67a660 Qt 4: 789cb3137fe86fc040d53b16b4736188362028cb

      QDockWidget is using its window coordinates as its default undock position in screen coordinates. To illustrate this issue I attached images of a demo project. I also attached the demo project.

      step1.png - I have two monitors. There is a wide monitor on the left(Left Monitor) and a taller skinnier monitor on the right(Right Monitor). The Right monitor is the Main Display, so its top left corner is the point 0,0.

      If I undock all the side QDockWidgets (by using their undock button, NOT by dragging), the result is step2.png.

      step2.png - Notice how each of the QDockWidgets undocked to their window coordinates in screen coordinates.

      This is a HUGE problem in the case of the QDockWidget that was docked on the right, because now he is inaccessible.

      It seems to me that the default undock position should use the QDockWidget's global position, not the relative position within the window. In other words, by default I would expect the QDockWidget to undock to roughly the same position on the screen as where it was when it was docked.

        1. build-DefaultUndock-Desktop_Qt_5_0_2_MSVC2010_32bit-Release.zip
          48 kB
        2. qtbug31044_diag.patch
          7 kB
        3. qtbug31044.tar
          100 kB
        4. step 1.png
          step 1.png
          4.22 MB
        5. step 2.png
          step 2.png
          3.64 MB
        For Gerrit Dashboard: QTBUG-31044
        # Subject Branch Project Status CR V

            kleint Friedemann Kleint
            cale Cale Larsen
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes